# Echelon-bot

./: .env  .env.example  Dockerfile  Makefile  README.md  admin_dashboard.py  bot.py  config.py  database.py  launcher_gui.py  parser_main.py  pyproject.toml  scraper.py  tasks.py
handlers/: admin.py  callbacks.py  commands.py
storage/: cookies.json
storage/db/: echelon.db  echelon.db-shm  echelon.db-wal
templates/: dashboard.html
tests/: test_database.py  test_scraper.py
utils/: keyboards.py
