[tool.uv]
package = false

[project]
name = "echelon"
version = "0.1.0"
description = "High-performance Avito deal aggregator and Telegram bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.15.0",
    "aiosqlite==0.20.0",
    "playwright==1.49.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.7.0",
    "playwright-stealth==1.0.6",
    "loguru==0.7.3",
    "tenacity==9.1.4",
    "customtkinter==5.2.2",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
log_cli = false
log_cli_level = "INFO"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disable_error_code = ["union-attr", "index", "return-value", "arg-type", "operator"]
